# vmo2

./: .gitignore  Cargo.toml  README.md
.github/actions/cache-cargo/: action.yml
.github/workflows/: ci.yml  rust.yml
lib/vmo2_compiler/: Cargo.toml
lib/vmo2_compiler/src/: ir.rs  ir_builder.rs  ir_compiler.rs  lib.rs  oxyde.pest  parser.rs  types.rs
lib/vmo2_compiler/src/tests/: ir_test.rs  mod.rs  parser_test.rs
lib/vmo2_serde/: Cargo.toml
lib/vmo2_serde/src/: deserialize.rs  lib.rs  metadata.rs  serialize.rs  traits.rs
lib/vmo2_serde/src/v1/: constants.rs  deserialize.rs  mod.rs  opcode.rs  reference_v1.txt  serialize.rs  test.rs
lib/vmo2_serde/src/v2/: reference_v2.txt
lib/vmo2_types/: Cargo.toml
lib/vmo2_types/src/: ast.rs  bytecode.rs  lib.rs  opcode.rs  test.rs  value.rs
lib/vmo2_vm/: Cargo.toml
lib/vmo2_vm/src/: lib.rs  profile.rs  test.rs  vm.rs
src/: compiler.rs  main.rs  vmo2.rs
