[package]
name = "vmo2"
version = "0.1.0"
edition = "2024"

[dependencies]
vmo2_vm = { path = "lib/vmo2_vm" }
vmo2_types = { path = "lib/vmo2_types" }
vmo2_serde = { path = "lib/vmo2_serde" }
clap = { version = "4.5.35", features = ["derive"] }

[[bin]]
name = "vmo2"
path = "src/vmo2.rs"

[[bin]]
name = "compiler"
path = "src/compiler.rs"

[workspace]
members = [
    ".",
    "lib/vmo2_vm",
    "lib/vmo2_types",
    "lib/vmo2_serde"
]
